--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "⎝🛡️ ALPHA 🛡️⎠ WhatsApp User Bot v4.0.0 ",
+    "name": "⎝🛡️ Lithum 🛡️⎠ WhatsApp User Bot v4.0.0 ",
     "description": "World best Sinhala/English WhatsApp Button Bot Developer Achi Fernando Enjoy Our Bot",
     "logo": "https://telegra.ph/file/cd6032c65c27e0510ddad.jpg",
     "keywords": ["Achi Bro lk | PG", "ALPHA"],
@@ -258,7 +258,7 @@
         "CAPTION": {
             "description": "LOGO MAKER CAPTION",
             "required": true,
-            "value": "   ▷ ᴹᴬᴰᴱ 🄱🅈 ⎝🛡️ ALPHA 🛡️⎠│"
+            "value": "   ▷ ᴹᴬᴰᴱ 🄱🅈 ⎝🛡️ Lithum 🛡️⎠│"
         },
         "COFFEEHOUSE_API_KEY": {
             "description": "Give it up. We give you this.",
