--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "⎝🛡️ Lithum 🛡️⎠ WhatsApp User Bot v4.0.0 ",
     "description": "World best Sinhala/English WhatsApp Button Bot Developer Achi Fernando Enjoy Our Bot",
     "logo": "https://telegra.ph/file/cd6032c65c27e0510ddad.jpg",
-    "keywords": ["Achi Bro lk | PG", "ALPHA"],
+    "keywords": ["Achi Bro lk | PG", "Lithum"],
     "stack": "container",
     "env": {
       "ALPHA_SESSION": {
